@@ -1,7 +1,7 @@
 bindir.o
 dlibdir.o
+etcdir.o
 incdir.o
-leapsec.o
 repos.o
 slibdir.o
 version.o
