@@ -1,3 +1,0 @@
-ctxt/leapsec.c: mk-ctxt conf-leapsec
-	rm -f ctxt/leapsec.c
-	./mk-ctxt ctxt_leapsec < conf-leapsec > ctxt/leapsec.c
