@@ -3,4 +3,4 @@
 
 struct tai *leapsecs_list = 0;
 unsigned long leapsecs_size = 0;
-const char *leapsecs_path = ctxt_leapsec;
+const char *leapsecs_dir = ctxt_etcdir;
