@@ -5,14 +5,18 @@
 #include <corelib/error.h>
 #include <corelib/open.h>
 #include <corelib/read.h>
+#include <corelib/sstring.h>
+
 #include "leapsecs.h"
 
 extern struct tai *leapsecs_list;
 extern unsigned long leapsecs_size;
-extern const char *leapsecs_path;
+extern const char *leapsecs_dir;
 
 int leapsecs_read(void)
 {
+  char fbuf[1024];
+  struct sstring sstr;
   struct stat sb;
   struct tai tai;
   struct tai *mem = 0;
@@ -20,7 +24,18 @@ int leapsecs_read(void)
   unsigned long ind;
   int fd = -1;
 
-  fd = open_ro(leapsecs_path);
+  /* build path to leapsecs.dat */
+  sstring_init(&sstr, fbuf, sizeof (fbuf));
+  sstring_cats(&sstr, leapsecs_dir);
+  if (sstr.len + sizeof("/leapsecs.dat") >= 1024) {
+    errno = error_nametoolong;
+    return -1;
+  }
+  sstring_cats(&sstr, "/leapsecs.dat");
+  sstring_0(&sstr);
+
+  /* open leapsecs.dat */
+  fd = open_ro(sstr.s);
   if (fd == -1) {
     if (errno != error_noent) return -1;
     leapsecs_free();
@@ -29,6 +44,7 @@ int leapsecs_read(void)
 
   if (fstat(fd, &sb) == -1) goto FAIL;
 
+  /* map and unpack packed tai structures */
   mem = alloc(sb.st_size);
   if (!mem) goto FAIL;
 
