@@ -4,4 +4,4 @@ leaps_free.o
 leaps_init.o
 leaps_read.o
 leaps_sub.o
-ctxt/leapsec.o
+ctxt/etcdir.o
